Ndis debug extension updates and topic consolidation (#604)
* One more update to debug checked topic reference

* Consolidating NDIS trace/debug topics

* Updates to NDIS Trace Topics

* Updates to NDIS Trace Topics

* Updates and expansion of NDIS Debugging topic

* Typo link fix

* Updates to NDIS Debugger Commands

* NDIS Debug topic updates

* Working on updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to ndiskd debug topics

* Updates to ndiskd debug topics

* Updates to ndiskd debug topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updates to NDISKD topics

* Updated to NDISKD debugger topics

* Updates to NDIS Debug topics

--- a/windows-driver-docs-pr/debugger/toc.yml
+++ b/windows-driver-docs-pr/debugger/toc.yml
@@ -1669,19 +1669,10 @@
     - name: "NDIS Debugging"
 # Auto-expanded node
       items: 
-      - name: "NDIS Debugging"
-        href: ndis-debugging.md
       - name: "Overview of NDIS Debugging"
         href: overview-of-ndis-debugging.md
-      - name: "Preparing for NDIS Debugging"
-        href: preparing-for-ndis-debugging.md
       - name: "Enabling NDIS Debug Tracing"
-# Auto-expanded node
-        items: 
-        - name: "Enabling NDIS Debug Tracing"
-          href: enabling-ndis-debug-tracing.md
-        - name: "Enabling NDIS Debug Tracing By Setting Registry Values"
-          href: enabling-ndis-debug-tracing-by-setting-registry-values.md
+        href: enabling-ndis-debug-tracing.md
     - name: "Kernel Streaming Debugging"
 # Auto-expanded node
       items: 
@@ -4396,16 +4387,6 @@
           href: -ndiskd-pendingnbls.md
         - name: "!ndiskd.nbllog"
           href: -ndiskd-nbllog.md
-        - name: "!ndiskd.cxadapter"
-          href: -ndiskd-cxadapter.md
-        - name: "!ndiskd.netqueue"
-          href: -ndiskd-netqueue.md
-        - name: "!ndiskd.netrb"
-          href: -ndiskd-netrb.md
-        - name: "!ndiskd.netpacket"
-          href: -ndiskd-netpacket.md
-        - name: "!ndiskd.netpacketfragment"
-          href: -ndiskd-netpacketfragment.md
         - name: "!ndiskd.oid"
           href: -ndiskd-oid.md
         - name: "!ndiskd.interfaces"
@@ -4452,6 +4433,23 @@
           href: -ndiskd-ndiskdversion.md
         - name: "!ndiskd.netreport"
           href: -ndiskd-netreport.md
+        - name: "NDIS CX Extensions (Ndiskd.dll)"
+# Auto-expanded node
+          items: 
+          - name: "!ndiskd.cxadapter"
+            href: -ndiskd-cxadapter.md
+          - name: "!ndiskd.netqueue"
+            href: -ndiskd-netqueue.md
+          - name: "!ndiskd.netrb"
+            href: -ndiskd-netrb.md
+          - name: "!ndiskd.netpacket"
+            href: -ndiskd-netpacket.md
+          - name: "!ndiskd.netfragment"
+            href: -ndiskd-netfragment.md
+          - name: "!ndiskd.nrc"
+            href: -ndiskd-nrc.md
+          - name: "!ndiskd.netring"
+            href: -ndiskd-netring.md
       - name: "RPC Extensions (Rpcexts.dll)"
 # Auto-expanded node
         items: 
