--- a/windows-driver-docs-pr/netcx/toc.yml
+++ b/windows-driver-docs-pr/netcx/toc.yml
@@ -49,7 +49,7 @@
     - name: "Canceling network data with net rings"
       href: canceling-network-data-with-net-rings.md
     - name: "Net ring element management"
-      href: "net-ring-element-management.md"
+      href: net-ring-element-management.md
 - name: "NetAdapterCx receive side scaling (RSS)"
   href: netadaptercx-receive-side-scaling-rss-.md
 - name: "Configuring NetAdapterCx power management"
