--- a/windows-driver-docs-pr/storage/toc.yml
+++ b/windows-driver-docs-pr/storage/toc.yml
@@ -426,13 +426,13 @@
       - name: "StorNVMe Miniport Driver"
 # Auto-expanded node
         items: 
-        - name: "NVMe Features Supported by StorNVMe"
+        - name: "NVMe features supported by StorNVMe"
           href: nvme-features-supported-by-stornvme.md
-        - name: "StorNVMe Command Set Support"
+        - name: "StorNVMe command set support"
           href: stornvme-command-set-support.md
-        - name: "StorNVMe Feature Support"
+        - name: "StorNVMe feature support"
           href: stornvme-feature-support.md
-        - name: "StorNVMe SCSI Translation Support"
+        - name: "StorNVMe SCSI translation support"
           href: stornvme-scsi-translation-support.md
     - name: "IDE Controller Minidrivers"
 # Auto-expanded node
@@ -527,7 +527,7 @@
       href: overview.md
     - name: "Definitions"
       href: definitions.md
-    - name: "Requirements"
+    - name: "Silo driver system requirements"
       href: requirements.md
     - name: "Architecture"
       href: architecture.md
