--- a/windows-driver-docs-pr/cfu/toc.yml
+++ b/windows-driver-docs-pr/cfu/toc.yml
@@ -5,12 +5,14 @@
     href: index.md
   - name: "CFU engineering guide"
     href: cfu-engineering-guide.md
+  - name: "CFU virtual HID device firmware update"
+    href: cfu-virtual-hid-device-firmware-update.md
   - name: "CFU inbox HIDCFU driver INF sample"
     href: cfu-inbox-hidcfu-driver-inf-sample.md
   - name: "CFU host driver sample"
     href: cfu-host-driver.md
   - name: "Customize the CFU driver"
-    href: customize-the-cfu-driver.md
+    href: customize-cfu-driver.md
   - name: "CFU standalone tool sample"
     href: cfu-standalone-tool-sample.md
   - name: "CFU protocol specification"
