This PR is to publish a new debug open enclave topic (#661)
* New open enclave topic

* Updates for new open enclave topic

* Updates for new open enclave topic

* Updates for new open enclave topic

* Updates for new open enclave topic

* Updates for new open enclave topic

--- a/windows-driver-docs-pr/debugger/toc.yml
+++ b/windows-driver-docs-pr/debugger/toc.yml
@@ -1146,6 +1146,8 @@
     href: controlling-the-target.md
   - name: "Enabling Postmortem Debugging"
     href: enabling-postmortem-debugging.md
+  - name: "Open Enclave debugging"
+    href: open-enclave-debugging.md
   - name: "Using the Debugger Command Window"
 # Auto-expanded node
     items: 
