This is to publish the new portable pdb debugger topic (#662)
* Adding new portable PDB topic to debugger docs

* Updates to new portable PDB debugger topic

* Updates based on tech review

* Updates for new portable symbol topic

--- a/windows-driver-docs-pr/debugger/toc.yml
+++ b/windows-driver-docs-pr/debugger/toc.yml
@@ -1786,6 +1786,8 @@
       href: symbols-and-symbol-files.md
     - name: "Public and Private Symbols"
       href: public-and-private-symbols.md
+    - name: "Portable PDB Symbols"
+      href: symbols-portable-pdb.md
   - name: "Accessing Symbols for Debugging"
 # Auto-expanded node
     items: 
