Bagold/cp work (#750)
* Fix broken links

* PR 2475

--- a/windows-driver-docs-pr/bringup/toc.yml
+++ b/windows-driver-docs-pr/bringup/toc.yml
@@ -315,6 +315,8 @@
     items: 
     - name: "ACPI system description tables"
       href: acpi-system-description-tables.md
+    - name: "Debug Port Table 2 (DBG2)"
+      href: acpi-debug-port-table.md
     - name: "Generate ACPI tables by using AcpiGenFx"
       href: generate-acpi-tables-by-using-acpigenfx.md
   - name: "Device management namespace objects"
