User/mivogel/bm64 addition (#751)
* Initial additions of BM64

* Added more images, further text

* Finished board description and began installation instructions

* Finished initial settings and install write-up

* Removed BM64 image to correct caps

* Re-added BM64 image with correct caps

* Corrected capitalization of Microchip

* Clarified switch configuration

* Spelling errors

* Added additional formatting, added BM64 firmware specifics, clarified steps

* Added separate page for BM64 setup and added mention of BM64 in other pages

* Added SPKCommand, initial style updates

* Revise update tool image, expanded on EEPROM updates

* Reformatted paths, added clarification to steps

* Added Further Help information, restructured and reformatted and elaborated as identified

* Added SPKCommand image, further formatting

* Further reorganization, formatting, clarification

* Reformatted table

* Format the table even more

* Added references to BM64 in the tests, added internal page links

* Final clarifications and formatting

* Made changes for 1.4.0 release

* Updated listings

* Updated link to new download for 1.4.0 & fixed a merge conflict

* billla-edits

* billla-edits

Co-authored-by: Joseph Spall <t-jospal@microsoft.com>
Co-authored-by: Artur Moura Aguiar <artura@microsoft.com>
Co-authored-by: Bill Lattimer <billla@microsoft.com>
Co-authored-by: Ted Hudek <tedhudek@users.noreply.github.com>

--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -110,6 +110,8 @@
         href: testing-BTP-hw-hid.md
       - name: "Audio Capable Radios"
         href: testing-BTP-hw-audio.md
+      - name: "BM-64-EVB board"
+        href: testing-BTP-hw-bm64.md
     - name: "BTP Tests"
       items:
       - name: "Currently Available BTP Tests"
@@ -120,5 +122,9 @@
         href: testing-BTP-tests-hid.md
       - name: "Testing Bluetooth Audio"
         href: testing-BTP-tests-audio.md
+      - name: "Testing Bluetooth Audio and HID"
+        href: testing-BTP-tests-audio-hid.md
+      - name: "Testing Bluetooth Battery"
+        href: testing-BTP-tests-battery.md
 - name: "Bluetooth Radio Reset and Recovery"
   href: bluetooth-radio-error-recovery.md
