--- a/windows-driver-docs-pr/cfu/toc.yml
+++ b/windows-driver-docs-pr/cfu/toc.yml
@@ -3,13 +3,13 @@
   items: 
   - name: "Component Firmware Update (CFU)"
     href: index.md
-  - name: "CFU engineering guide"
-    href: cfu-engineering-guide.md
-  - name: "CFU virtual HID device firmware update"
-    href: cfu-virtual-hid-device-firmware-update.md
+  - name: "CFU firmware implementation guide"
+    href: cfu-firmware-implementation-guide.md
   - name: "CFU inbox driver INF configuration"
     href: cfu-inbox-driver-inf-configuration.md
-  - name: "CFU standalone tool sample"
-    href: cfu-standalone-tool-sample.md
   - name: "CFU protocol specification"
     href: cfu-specification.md
+  - name: "CFU standalone tool"
+    href: cfu-standalone-tool.md
+  - name: "CFU HID device firmware update simulation"
+    href: cfu-firmware-update-simulation.md
