--- a/windows-driver-docs-pr/cfu/toc.yml
+++ b/windows-driver-docs-pr/cfu/toc.yml
@@ -5,7 +5,7 @@
     href: index.md
   - name: "CFU firmware implementation guide"
     href: cfu-firmware-implementation-guide.md
-  - name: "CFU inbox driver INF configuration"
+  - name: "CFU inbox HIDCFU driver INF configuration"
     href: cfu-inbox-driver-inf-configuration.md
   - name: "CFU protocol specification"
     href: cfu-specification.md
