--- a/windows-driver-docs-pr/network/toc.yml
+++ b/windows-driver-docs-pr/network/toc.yml
@@ -2559,7 +2559,7 @@
     - name: "Hyper-V Extensible Switch Status Indications"
       items: 
       - name: "Overview"
-      - href: hyper-v-extensible-switch-status-indications.md
+        href: hyper-v-extensible-switch-status-indications.md
       - name: "NDIS_STATUS_SWITCH_NIC_STATUS"
         href: ndis-status-switch-nic-status.md
       - name: "NDIS_STATUS_SWITCH_PORT_REMOVE_VF"
