Bcdedit fixes for topic performance measures added perf meta data tag to primary /set topic  (#819)
* Adding new topics for re-write of BCDEdit content

* Adding new topics for re-write of BCDEdit content

* Adding new topics for re-write of BCDEdit content

* Additional work on updates and new topics for BCDEdit

* Additional work on updates and new topics for BCDEdit

* Additional work on updates and new topics for BCDEdit

* Updates to BCDEdit topics based on testing.

* Updates to BCDEdit topics based on testing.

* Updates to BCDEdit topics based on testing.

* Minor edits to new hypervisor settings debugger topic

* Updates to BCDEdit topics

* Updates to BCDEdit topics to fix version suggestion

--- a/windows-driver-docs-pr/devtest/toc.yml
+++ b/windows-driver-docs-pr/devtest/toc.yml
@@ -2732,6 +2732,8 @@
       items: 
       - name: "BCDEdit Options Reference"
         href: bcd-boot-options-reference.md
+      - name: "BCDEdit /bootsequence"
+        href: bcdedit--bootsequence.md
       - name: "BCDEdit /bootdebug"
         href: bcdedit--bootdebug.md
       - name: "BCDEdit /dbgsettings"
@@ -2740,12 +2742,24 @@
         href: bcdedit--debug.md
       - name: "BCDEdit /deletevalue"
         href: bcdedit--deletevalue.md
+      - name: "BCDEdit /displayorder"
+        href: bcdedit--displayorder.md        
       - name: "BCDEdit /ems"
         href: bcdedit--ems.md
       - name: "BCDEdit /emssettings"
         href: bcdedit--emssettings.md
+      - name: "BCDEdit /enum"
+        href: bcdedit--enum.md
+      - name: "BCDEdit /event"
+        href: bcdedit--event.md
+      - name: "BCDEdit /hypervisorsettings"
+        href: bcdedit--hypervisorsettings.md
       - name: "BCDEdit /set"
         href: bcdedit--set.md
+      - name: "BCDEdit /timeout"
+        href: bcdedit--timeout.md
+      - name: "BCDEdit /toolsdisplayorder"
+        href: bcdedit--toolsdisplayorder.md
     - name: "Editing Boot Options"
 # Auto-expanded node
       items: 
